--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <nav>
         <img src="DSC_pos.png" class="headimg" alt="">
@@ -20,15 +22,21 @@
     </nav>
     <div class="main">
         <div class="mainc">
-            <h1 id="hh1">Amazing corners of the planet</h1>
-            <p id="pp1">Coming Soon &nbsp; |  &nbsp; Friday, November 3rd, 14:20</p>
+            <h1 id="hh1">Amazing corners of the WildLife</h1>
+            <p id="pp1">Coming Soon &nbsp; | &nbsp; Friday, November 3rd, 14:20</p>
             <button class="mbnt" id="bb1">Watch trailer</button>
             <button class="mbnt2" id="bb2" onclick="up()">Next times</button>
         </div>
+        <div class="lines-button">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
     </div>
-    <img src="wallpaperflare.com_wallpaper.jpg" class="img"  alt="">
-    <img src="wallpaperflare.com_wallpaper (1).jpg" class="img"  alt="">
+    <img src="wallpaperflare.com_wallpaper.jpg" class="img" alt="">
+    <img src="wallpaperflare.com_wallpaper (1).jpg" class="img" alt="">
     <img src="wallpaperflare.com_wallpaper (2).jpg" class="img" alt="">
     <script src="yeah.js"></script>
 </body>
+
 </html>
